--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-streamlit==1.15.0
-matplotlib==3.7.1
-streamlit_folium==0.12.1
-folium==0.13.0
-geopandas==0.10.2
-numpy==1.22.4
-geopy==2.2.0
-fiona==1.8.20
-osmnx==1.1.1
-earthengine-api==0.1.311
-requests==2.26.0
-rioxarray==0.7.1
-pystac-client==0.3.0
-shapely==1.7.1
-rasterio==1.2.10
-pystac==1.2.0
+streamlit
+matplotlib
+streamlit_folium
+folium
+geopandas
+numpy
+geopy
+fiona
+osmnx
+earthengine-api
+requests
+rioxarray
+pystac-client
+shapely
+rasterio
+pystac
