--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--find-links=https://girder.github.io/large_image_wheels GDAL
 streamlit
 matplotlib
 streamlit_folium
@@ -24,4 +25,3 @@ pyutilib
 iso8601
 numpy==1.26.4
 pyomo
-pygdal==3.2.2.10
