--- a/environment.yml
+++ b/environment.yml
@@ -2,16 +2,4 @@ name: geo
 channels:
   - conda-forge
 dependencies:
-  - gdal
-  - pip
-  - pip:
-      - geopandas
-      - keplergl
-      - streamlit
-      - localtileserver
-      - palettable
-      - streamlit-folium
-      - streamlit-keplergl
-      - streamlit-bokeh-events
-      - git+https://github.com/giswqs/leafmap
-      - git+https://github.com/giswqs/geemap
+  - gdal=3.4.3
